--- a/面试.md
+++ b/面试.md
@@ -8,27 +8,30 @@
 
     对象
 
-## 模块化
+    模块化
+
+    Promise
+        1.异步编程
+            fs文件操作
+            数据库操作
+            AJAX
+            定时器
+
+        2.异步编程新的解决方案
+            优点：
+                    1.支持链式调用，解决回调地狱问题
+
+                    2.指定回调函数的方式更加灵活
 
 ## AJAX/Axios
 
-## Promise
-    1.异步编程
-        fs文件操作
-        数据库操作
-        AJAX
-        定时器
-
-    2.异步编程新的解决方案
-        优点：
-                1.支持链式调用，解决回调地狱问题
-
-                2.指定回调函数的方式更加灵活
-
-
-
+## Nodejs
 
 ## Vue
+
+## Webpack
+
+## Git
 
 ## MiniProgram
 
