--- a/面试.md
+++ b/面试.md
@@ -1,9 +1,80 @@
-## HTML/CSS
+## W3C
+    好处： 提高搜索引擎对页面的抓取效率，对SEO(搜索引擎优化)很有帮助
+            SEO: 搜索引擎优化
+
+    标准： 结构、表现、行为相分离，标签或属性名语义化。  
+
+    作用： 提高页面渲染速度，提高用户体验。
+
+    HTTP/HTTPS协议之间的区别
+        HTTP
+            传输数据没有加密，安全性差
+
+        HTTPS
+            基于HTTP进行通信，并利用SSL加密数据包，使通信更安全
+
+        SSL/TLS协议
+            传输数据的时候对数据进行加密
+
+## HTML5
+    优势：改进了互操作性，并减少了开发成本。
+
+    新特性：语义化标签、音频、视频、本地存储、会话存储。
+
+    HTML5文档类型是<！doctype html>。
+
+    HTML5使用的字符集< meta charset="UTF8">
+
+
+    本地存储有哪些，它们之间的区别
+        localStorage: 持久化存储
+
+        sessionStorage: 会话存储
+
+## CSS
+    初始化css
+        不同浏览器的标签默认值不用，如果不初始化css，会导致页面在不同浏览器之间出现差异。
+
+    权重
+        !important 1000
+        ID  100
+        class 10
+        元素 13
+
+    引入方式
+        行内样式、内嵌、外链
+
+    display、
+        none、block、inline、inline-block、flex
+
+    content
+        应用在before、after伪元素插入内容
+
     元素居中
+        绝对定位absolute，上下左右为0，margin：auto;
+        父元素flex布局，margin: auto;
+        绝对定位absolute,上右50%,平移transfrom: translate(-50%, -50%);
 
     文本居中
+        display: inline-block;,text-align: center;
+        line-height: height; text-align: center;
+
+    BFC
+        定义: 块级格式化上下文，css里盒模型布局的一种渲染模式，页面上一个独立的渲染区域
+
+        触发: 
+            开启浮动float
+            定位absolute/fixed
+            设置overflow: hidden;(不为visible)
+            display的值为table-cell / table-caption / inline-block / flex / inline-flex
+
+    常用的伪元素有哪些
+
 
 ## JavaScript
+    数据类型
+
+
     数组
 
     对象
@@ -23,17 +94,51 @@
 
                     2.指定回调函数的方式更加灵活
 
+    ES6新特性
+
+    数组去重
+
+    深拷贝和浅拷贝
+
+    闭包
+
+    原型
+
+    作用域
+
 ## AJAX/Axios
+
+    请求拦截器
 
 ## Nodejs
 
 ## Vue
+    vue双向绑定原理是什么，关键点在哪里?
+
+    生命周期
+
+    组件间通信
+
+    防抖与节流
+
+    导航守卫
+
+    常用指令
+
+    v-if和v-show的区别
+
+    v-for中的key
+
+
 
 ## Webpack
 
 ## Git
 
 ## MiniProgram
+    移动端如何适配不同屏幕尺寸
+
+
 
 
 
