--- a/面试.md
+++ b/面试.md
@@ -21,11 +21,6 @@
 
     新特性：语义化标签、音频、视频、本地存储、会话存储。
 
-    HTML5文档类型是<！doctype html>。
-
-    HTML5使用的字符集< meta charset="UTF8">
-
-
     本地存储有哪些，它们之间的区别
         localStorage: 持久化存储
 
@@ -70,50 +65,86 @@
 
     常用的伪元素有哪些
 
-
 ## JavaScript
-    数据类型
-
-
     数组
-
-    对象
+        push(),向末尾添加数组
+        pop(),向末尾删除数组
+        shift(),删除数组第一个元素
+        unshift(),向数组开头添加元素
+        .reverse()  反转数组顺序
+        .sort((item) => {})  数组排序
+        .slice(start, end)  选取数组的一部分，并返回新数组
+        .splice(1, 1, '')  添加或删除元素,并返回被删除的元素
 
     模块化
-
-    Promise
-        1.异步编程
-            fs文件操作
-            数据库操作
-            AJAX
-            定时器
-
-        2.异步编程新的解决方案
-            优点：
-                    1.支持链式调用，解决回调地狱问题
-
-                    2.指定回调函数的方式更加灵活
+        commonJS
+        AMD
+        ES6
 
     ES6新特性
+        不会进行变量提升
+        有自己的作用域
+        不能重复声明
+        let
+            可修改
+            可先声明后赋值
+        const
+            不可修改
+            声明时必须赋值
 
     数组去重
+        new Set(arr);
+        indexOf()
+        
+    堆和栈
+        栈：基本类型，大小固定，自动分配内存，自动释放。
+        堆：引用类型，大小不一，动态分配内存。
 
     深拷贝和浅拷贝
+        浅拷贝，拷贝变量对应的地址
+            实现: 直接赋值
+
+        深拷贝,开辟新内存
+            实现：for in
+                封装一个函数，用for in循环遍历对象，判断对象里的每个属性类型，如果是引用类型，就运用递归对该属性继续进行遍历，如果是基本类型则直接赋值给新对象。
 
     闭包
+        闭包就是能够读取其他函数内部变量的函数
 
     原型
+        原型是一个对象，是函数的一个属性prototype，通过原型可以实现对象的属性继承。
+        原型链：原型对象创建过程的链式结构。
 
     作用域
+        可访问对象的区域
 
 ## AJAX/Axios
+    优缺点
+        无需刷新页面而与服务器进行通信
 
-    请求拦截器
+        缺点
+            没有浏览历史，存在跨域问题，对seo不友好。
 
-## Nodejs
+    同源策略
+        同源：协议、域名、端口号必须完全相同
+        跨域：违背同源策略就是跨域
 
+    跨域解决
+        JSONP
+        CORS跨域资源共享，设置允许跨域
+        开启代理服务器
+
+    axios
+        支持promiseAPI
+        拦截请求和响应
+        自动转换JSON格式
+        
 ## Vue
+    mvvm理解
+
     vue双向绑定原理是什么，关键点在哪里?
+
+    计算属性和监听属性
 
     生命周期
 
@@ -129,7 +160,9 @@
 
     v-for中的key
 
+    路由按需加载
 
+## Nodejs
 
 ## Webpack
 
