--- a/面试.md
+++ b/面试.md
@@ -26,6 +26,9 @@
 
         sessionStorage: 会话存储
 
+        cookie: 用于浏览器和服务器端进行通信
+            每次发送请求都携带，容易被截获，不安全
+
 ## CSS
     初始化css
         不同浏览器的标签默认值不用，如果不初始化css，会导致页面在不同浏览器之间出现差异。
@@ -138,29 +141,59 @@
         支持promiseAPI
         拦截请求和响应
         自动转换JSON格式
-        
+
 ## Vue
     mvvm理解
+        M：model模型层
+        V：View视图层
+        VM：V和M链接的桥梁(控制器)
+        mvvm采用双向数据绑定，ViewModel负责把Model的数据同步到View显示出来，还负责把View的修改同步回到Model。
 
     vue双向绑定原理是什么，关键点在哪里?
+        vue.js 则是采用数据劫持结合发布者-订阅者模式的方式，通过Object.defineProperty()来劫持各个属性的setter，getter，在数据变动时发布消息给订阅者，触发相应的监听回调。由此可见，Object.defineProperty() 这个API是Vue实现双向数据绑定的关键
+
+        vue20 使用的是 Object.difineproperty()中的 set 和 get 方法实现数据劫持+开发订阅者模式，vue3.0 用的是 proxy 代理
 
     计算属性和监听属性
+        计算属性：计算属性在computed中定义，有缓存机制，计算的属性不变时调用缓存的数据，但不支持异步操作。
+        监听属性：监听属性在data中定义、无缓存，每次属性发生变化都会调用回调、支持异步、
 
     生命周期
+        vue实例从开始创建、初始化数据、编译模板、挂载DOM、渲染-更新、销毁的过程。
+        常用钩子：muonted、beforeDestroy
 
     组件间通信
-
+        props: 父子间通信
+        自定义事件：适用于子传父
+        全局事件总线$bus：全能
+        消息订阅与发布：全能
+        vuex：全能
+        插槽：父子间通信(结构)
+            
     防抖与节流
-
+        节流：触发高频事件时N秒内函数只执行一次。  场景：搜索框模糊搜索
+        防抖：触发事件N秒后函数才会执行，在此期间，如果函数再次被触发，则会重新计时。  场景：点击按钮事件
+        
     导航守卫
+        全局守卫(前置、后置)：进入之前，离开之后
+        独享守卫：进入之前(只有前置)
+        组件内守卫: 进入组件后渲染组件之前，当前路由改变该组件复用时，离开之前
 
     常用指令
 
     v-if和v-show的区别
+        v-if: 删除节点
+        v-show: 隐藏节点
 
     v-for中的key
+        key是虚拟DOM对象的标识，状态中的数据发生变化时，Vue会根据[新数据]生成[新的虚拟DOM]，[新虚拟DOM]与[旧虚拟DOM]进行差异比较。
+
+    $nextTick作用
+        下次DOM更新循环结束后执行延迟回调
+        场景：v-for节点在mounted获取不到。
 
     路由按需加载
+        component: ()=>import('@/views/Search'),
 
 ## Nodejs
 
@@ -170,6 +203,7 @@
 
 ## MiniProgram
     移动端如何适配不同屏幕尺寸
+        flex弹性布局，rpx做像素单位
 
 
 
