--- a/面试.md
+++ b/面试.md
@@ -19,7 +19,7 @@
 ## HTML5
     优势：改进了互操作性，并减少了开发成本。
 
-    新特性：语义化标签、音频、视频、本地存储、会话存储。
+    新特性：语义化标签、音频、视频、本地离线存储。
 
     本地存储有哪些，它们之间的区别
         localStorage: 持久化存储
@@ -38,9 +38,6 @@
         ID  100
         class 10
         元素 13
-
-    引入方式
-        行内样式、内嵌、外链
 
     display、
         none、block、inline、inline-block、flex
@@ -195,15 +192,6 @@
     路由按需加载
         component: ()=>import('@/views/Search'),
 
-## Nodejs
-
-## Webpack
-
-## Git
-
-## MiniProgram
-    移动端如何适配不同屏幕尺寸
-        flex弹性布局，rpx做像素单位
 
 
 
