--- a/面试.md
+++ b/面试.md
@@ -101,7 +101,7 @@
         堆：引用类型，大小不一，动态分配内存。
 
     深拷贝和浅拷贝
-        浅拷贝，拷贝变量对应的地址
+        浅拷贝，拷贝变量地址
             实现: 直接赋值
 
         深拷贝,开辟新内存
