--- a/面试.md
+++ b/面试.md
@@ -1,3 +1,11 @@
+##  浏览器之间的差异/兼容性
+    五大浏览器              四大内核
+        IE                  Trident
+        Firefox             Gecko
+        Chrome              Blink
+        Safari              Webkit
+        Opera               Blink
+
 ## W3C
     好处： 提高搜索引擎对页面的抓取效率，对SEO(搜索引擎优化)很有帮助
             SEO: 搜索引擎优化
@@ -32,6 +40,9 @@
 ## CSS
     初始化css
         不同浏览器的标签默认值不用，如果不初始化css，会导致页面在不同浏览器之间出现差异。
+
+    选择器
+
 
     权重
         !important 1000
@@ -149,7 +160,7 @@
     vue双向绑定原理是什么，关键点在哪里?
         vue.js 则是采用数据劫持结合发布者-订阅者模式的方式，通过Object.defineProperty()来劫持各个属性的setter，getter，在数据变动时发布消息给订阅者，触发相应的监听回调。由此可见，Object.defineProperty() 这个API是Vue实现双向数据绑定的关键
 
-        vue20 使用的是 Object.difineproperty()中的 set 和 get 方法实现数据劫持+开发订阅者模式，vue3.0 用的是 proxy 代理
+        vue2.0 使用的是 Object.difineproperty()中的 set 和 get 方法实现数据劫持+开发订阅者模式，vue3.0 用的是 proxy 代理
 
     计算属性和监听属性
         计算属性：计算属性在computed中定义，有缓存机制，计算的属性不变时调用缓存的数据，但不支持异步操作。
@@ -169,7 +180,7 @@
             
     防抖与节流
         节流：触发高频事件时N秒内函数只执行一次。  场景：搜索框模糊搜索
-        防抖：触发事件N秒后函数才会执行，在此期间，如果函数再次被触发，则会重新计时。  场景：点击按钮事件
+        防抖：触发事件N秒后函数才会执行，在此期间，如果事件再次被触发，则会重新计时。  场景：点击按钮事件
         
     导航守卫
         全局守卫(前置、后置)：进入之前，离开之后
@@ -191,6 +202,29 @@
 
     路由按需加载
         component: ()=>import('@/views/Search'),
+
+
+## 性能优化
+    雪碧图
+    webpack打包压缩代码
+    单页面应用
+    资源延迟加载、懒加载、按需加载
+    本地存储
+    减少发送请求次数
+
+## 不同屏幕尺寸适配
+    rem
+    vw
+    vh
+
+## 移动端响应式设计:
+    响应式布局：
+        企业站 或内容很少的 可以改成响应式
+        电商类内容太多，无法做到响应式，做成 pc一个网站，移动端一个网站
+
+    媒体查询
+
+    Bootstrap框架 （快速开发响应式网站）
 
 
 
